--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Livro de Receitas</h1>
     <a href="receitas/burger.html">Burger</a>
+    <a href="receitas/BolodeChocolate.html">Bolo de Chocolate</a>
   </body>
 </html>
