--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Livro de Receitas</h1>
-    <a href="receitas/burger.html">Burger</a>
-    <a href="receitas/BolodeChocolate.html">Bolo de Chocolate</a>
+    <ul>
+      <li><a href="receitas/burger.html">hambúrguer</a></li>
+      <li><a href="receitas/BolodeChocolate.html">Bolo de Chocolate</a></li>
+      <li><a href="receitas/arroz.html">Arroz Doce</a></li>
+    </ul>
   </body>
 </html>
